create the public db if it doesn't already exist before copying to it

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,10 +7,12 @@ default: &default
 
 development:
   <<: *default
+  database: aact_proj
 
 test:
   <<: *default
-  database: aact_test
+  database: aact_proj_test
 
 production:
   <<: *default
+  database: aact_proj
