small fixes to get aact-proj working on my current laptop

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,11 +3,10 @@ default: &default
   encoding: utf8
   min_messages: warning
   timeout: 5000
-  url:  <%= ENV.fetch("AACT_PROJ_DATABASE_URL", "") %>
+  url:  "postgres://aact@localhost:5432/aact_proj"
 
 development:
   <<: *default
-  url:  <%= ENV.fetch("AACT_PROJ_DATABASE_URL", "") %>
 
 test:
   <<: *default
@@ -15,4 +14,3 @@ test:
 
 production:
   <<: *default
-  url:  <%= ENV.fetch("AACT_PROJ_DATABASE_URL", "") %>
